--- a/src/app/polymer-posts.html
+++ b/src/app/polymer-posts.html
@@ -1,11 +1,17 @@
 <link rel="import" href="/bower_components/polymer/polymer-element.html">
+<link rel="import" href="/bower_components/paper-card/paper-card.html">
+<link rel="import" href="/bower_components/paper-button/paper-button.html">
+<link rel="import" href="/bower_components/paper-input/paper-input.html">
+<link rel="import" href="/bower_components/paper-progress/paper-progress.html">
+<link rel="import" href="/bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="login-posts.html">
 
 <dom-module id="polymer-posts">
   <template>
     <style>
     </style>
 
-    <h1>Hola Polymer Posts</h1>
+    <login-posts></login-posts>
   </template>
 
   <script>
