--- a/src/app/component-card.html
+++ b/src/app/component-card.html
@@ -7,40 +7,41 @@
 <dom-module id="component-card">
   <template>
     <style>
-       :host{
-      display: flex;
-    }
-    paper-card{
-      width: 300px;
-      --paper-card-header-image:{
-      width: 300px;
+      :host{
+        display: flex;
       }
-      --paper-card-header-image: {
-      max-height: 220px;
+      paper-card{
+        width: 300px;
+        --paper-card-header-image: {
+          width: 300px;
+        }
+        --paper-card-header-image: {
+          max-height: 220px;
+        }
+        background-color: #f5f5f5;
       }
-      background-color: #f5f5f5;
-    }
-    h1{
-      color: #3f5185;
-      font-size: 1em;
-      font-family: roboto, sans-serif;
-    }
-    .card-content p{
-      font-size: .9em;
-    }
-    .sindescription{
-      color: #999;
-    }
-    .card-actions{
-      color: #D7CCC8;
-    }
-
-    iron-icon.star {
-      --iron-icon-width: 16px;
-      --iron-icon-height: 16px;
-      color: var(--paper-amber-500);
- }
-
+      h1{
+        color: #3f5185;
+        font-size: 1em;
+        font-family: roboto, sans-serif;
+      }
+      .card-content p{
+        font-size: .9em;
+      }
+      .sindescription{
+        color: #999;
+      }
+      .card-actions{
+        color: #D7CCC8;
+      }
+      .best-friends {
+        margin: 0px 0px 10px 12px;
+      }
+      iron-icon.star {
+        --iron-icon-width: 16px;
+        --iron-icon-height: 16px;
+        color: var(--paper-amber-500);
+      }
     </style>
 
   <paper-card>
