--- a/src/app/polymer-posts.html
+++ b/src/app/polymer-posts.html
@@ -5,12 +5,13 @@
 <link rel="import" href="/bower_components/paper-progress/paper-progress.html">
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="login-posts.html">
+<link rel="import" href="post-input.html">
 
 <dom-module id="polymer-posts">
   <template>
     <style>
     </style>
-
+    <post-input></post-input>
     <login-posts></login-posts>
   </template>
 
