--- a/src/app/polymer-posts.html
+++ b/src/app/polymer-posts.html
@@ -1,4 +1,7 @@
 <link rel="import" href="/bower_components/polymer/polymer-element.html">
+<link rel="import" href="/bower_components/neon-animation/neon-animation.html">
+<link rel="import" href="/bower_components/neon-animation/web-animations.html">
+<link rel="import" href="/bower_components/neon-animation/neon-animation-behavior.html">
 <link rel="import" href="/bower_components/app-layout/app-drawer/app-drawer.html">
 <link rel="import" href="/bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
 <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
@@ -12,14 +15,20 @@
 <link rel="import" href="/bower_components/paper-avatar/paper-avatar.html">
 <link rel="import" href="/bower_components/paper-menu-button/paper-menu-button.html">
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="/bower_components/paper-listbox/paper-listbox.html">
+<link rel="import" href="/bower_components/paper-item/paper-item.html">
 <link rel="import" href="component-card.html">
 
 <dom-module id="polymer-posts">
   <template>
     <style>
-      :host{
-        --paper-avatar-background: #009688;
-      }
+      #customAvatar {
+         --paper-avatar-background: var(--google-blue-300);
+         @apply(--shadow-none);
+       }
+       #customAvatar:hover {
+         @apply(--shadow-elevation-8dp);
+       }
       app-header {
         background-color: #607D8B;
         color: #fff;
@@ -49,15 +58,11 @@
           <paper-icon-button id="toggle" icon="menu"></paper-icon-button>
           <div main-title></div>
           <!-- <div main-title>Twitter App</div> -->
-          <paper-avatar mini icon="social:person-outline"></paper-avatar>
           <paper-menu-button>
-            <paper-icon-button icon="menu" slot="dropdown-trigger" alt="menu"></paper-icon-button>
+            <paper-icon-button icon="social:person-outline" slot="dropdown-trigger" alt="menu"></paper-icon-button>
             <paper-listbox slot="dropdown-content">
-              <paper-item>alpha</paper-item>
+              <paper-item>Cerrar Sesion</paper-item>
               <paper-item>beta</paper-item>
-              <paper-item>gamma</paper-item>
-              <paper-item>delta</paper-item>
-              <paper-item>epsilon</paper-item>
             </paper-listbox>
           </paper-menu-button>
         </app-toolbar>
