--- a/src/app/polymer-posts.html
+++ b/src/app/polymer-posts.html
@@ -4,7 +4,7 @@
 <link rel="import" href="/bower_components/neon-animation/neon-animation-behavior.html">
 <link rel="import" href="/bower_components/paper-card/paper-card.html">
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
-<link rel="import" href="/bower_components/paper-input/paper-input.html">
+<link rel="import" href="/bower_components/paper-input/paper-input.html">2
 <link rel="import" href="/bower_components/app-layout/app-drawer/app-drawer.html">
 <link rel="import" href="/bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
 <link rel="import" href="/bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
@@ -81,6 +81,10 @@
             </template>
           </div>
         </app-drawer>
+
+        <div class="content-posts">
+          <post-input></post-input>
+        </div>
         
         <sample-content size="100"></sample-content>
       </app-drawer-layout>
